--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/fontawesome.min.css"
           integrity="sha512-J2Gce+WmOttffHOrVKLTlzxIalPXUMDbSfn5ADqp8Vj9EngnjNHr+jjiL3ZB8muEzo+K51gU10X+0eGqGNL7QA=="
@@ -19,10 +19,19 @@
           crossorigin="anonymous"
           referrerpolicy="no-referrer" />
     <title>Recipes</title>
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
+
+      html {
+        font-size: 62.5%;
+      }
+
+      body {
+        font-size: 1.6rem;
+      }
+    </style>
   </head>
-  <body>
-    <h1>
-      <i class="fa-solid fa-house"></i>Recipes
-    </h1>
-  </body>
-</html>
