--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -3,8 +3,8 @@
   <header class="main-header-container">
     <div class="main-header container">
       <h1>
-        <a href="/">
-          <i class="fa-solid fa-house"></i><span>Recipes {{ nome }}</span>
+        <a href="/" class="main-logo">
+          <i class="fa-solid fa-house"></i><span>Recipes</span>
         </a>
       </h1>
     </div>
