--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,13 +1,15 @@
 {% include 'recipes/partials/head.html' %}
 <body>
-  <header class="main-header-container">
-    <div class="main-header container">
-      <h1>
-        <a href="/" class="main-logo">
-          <i class="fa-solid fa-house"></i><span>Recipes</span>
-        </a>
-      </h1>
+  {% include 'recipes/partials/header.html' %}
+  <div class="search-container">
+    <div class="container">
+      <form action="" class="search-form">
+        <input type="search" class="search-input" name="search">
+        <button type="submit" class="search-button">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </button>
+      </form>
     </div>
-  </header>
+  </div>
 </body>
 </html>
