--- a/recipes/templates/recipes/partials/header.html
+++ b/recipes/templates/recipes/partials/header.html
@@ -2,7 +2,7 @@
     <div class="main-header container">
         <h1>
             <a href="/" class="main-logo">
-                <i class="fa-solid fa-house"></i><span>Recipes</span>
+                <i class="fa-solid fa-utensils"></i><span>Recipes</span>
             </a>
         </h1>
     </div>
