--- a/recipes/templates/recipes/partials/search.html
+++ b/recipes/templates/recipes/partials/search.html
@@ -3,7 +3,7 @@
         <form action="" class="search-form">
             <input type="search" class="search-input" name="search">
             <button type="submit" class="search-button">
-                <i class="fa-solid fa-magnifying-glass"></i>
+                <i class="fas fa-search"></i>
             </button>
         </form>
     </div>
