--- a/recipes/templates/recipes/partials/header.html
+++ b/recipes/templates/recipes/partials/header.html
@@ -1,8 +1,9 @@
 <header class="main-header-container">
     <div class="main-header container">
         <h1>
-            <a href="/" class="main-logo">
-                <i class="fa-solid fa-utensils"></i><span>Recipes</span>
+            <a class="main-logo" href="/">
+                <i class="fa-solid fa-utensils"></i>
+                <span class="main-logo-text">Recipes</span>
             </a>
         </h1>
     </div>
