--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,9 +1,15 @@
 <div class="recipe recipe-list-item">
     <div class="recipe-cover">
-        <img src="https://placehold.co/1280x720/269fe6/FFF" alt="Temporário">
+        <a href="{% url "recipes:recipe" recipe.id %}">
+            <img src="https://placehold.co/1280x720/269fe6/FFF" alt="Temporário">
+        </a>
     </div>
     <div class="recipe-title-container">
-        <h2 class="recipe-title">{{ recipe.title }}</h2>
+        <h2 class="recipe-title">
+            <a href="{% url "recipes:recipe" recipe.id %}">
+                {{ recipe.title }}
+            </a>
+        </h2>
     </div>
     <div class="recipe-author">
         <span class="recipe-author-item">
@@ -43,7 +49,7 @@
     {% if not is_detail %}
     <footer class="recipe-footer">
         <a class="recipe-read-more button button-dark button-full-width"
-           href="/recipes/3/">
+           href="{% url "recipes:recipe" recipe.id %}>
             <i class="fas fa-eye"></i>
             <span>ver mais...</span>
         </a>
