--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,14 +1,12 @@
 <div class="recipe recipe-list-item">
     <div class="recipe-cover">
-        <a href="{% url "recipes:recipe" recipe.id %}">
+        <a href="{% url 'recipes:recipe' recipe.id %}">
             <img src="https://placehold.co/1280x720/269fe6/FFF" alt="Temporário">
         </a>
     </div>
     <div class="recipe-title-container">
         <h2 class="recipe-title">
-            <a href="{% url "recipes:recipe" recipe.id %}">
-                {{ recipe.title }}
-            </a>
+            <a href="{% url 'recipes:recipe' recipe.id %}">{{ recipe.title }}</a>
         </h2>
     </div>
     <div class="recipe-author">
@@ -45,19 +43,15 @@
             <div class="recipe-meta-text">{{ recipe.servings }} {{ recipe.servings_unit }}</div>
         </div>
     </div>
-
     {% if not is_detail %}
-    <footer class="recipe-footer">
-        <a class="recipe-read-more button button-dark button-full-width"
-           href="{% url "recipes:recipe" recipe.id %}>
-            <i class="fas fa-eye"></i>
-            <span>ver mais...</span>
-        </a>
-    </footer>
+        <footer class="recipe-footer">
+            <a class="recipe-read-more button button-dark button-full-width"
+               href="{% url 'recipes:recipe' recipe.id %}">
+                <i class="fas fa-eye"></i>
+                <span>ver mais...</span>
+            </a>
+        </footer>
     {% else %}
-    <div class="preparation-steps">
-        {{ recipe.preparation_steps|linebreaksbr }}
-    </div>
+        <div class="preparation-steps">{{ recipe.preparation_steps|linebreaksbr }}</div>
     {% endif %}
-
 </div>
