--- a/recipes/templates/recipes/pages/recipe-view.html
+++ b/recipes/templates/recipes/pages/recipe-view.html
@@ -1,7 +1,9 @@
 {% extends 'global/base.html' %}
 {% block title %}
-    TESTE 2
+    Receita |
 {% endblock title %}
 {% block content %}
-    <div class="main-content main-content-detail container">{% include 'recipes/partials/recipe.html' %}</div>
+    <div class="main-content main-content-detail container">
+        {% include 'recipes/partials/recipe.html' %}
+    </div>
 {% endblock content %}
