--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -62,6 +62,12 @@
             </a>
         </footer>
     {% else %}
-        <div class="preparation-steps">{{ recipe.preparation_steps|linebreaksbr }}</div>
+        <div class="preparation-steps">
+            {% if recipe.preparation_steps_is_html %}
+                {{ recipe.preparation_steps|safe }}
+            {% else %}
+                {{ recipe.preparation_steps|linebreaksbr }}
+            {% endif %}
+        </div>
     {% endif %}
 </div>
