--- a/recipes/templates/recipes/partials/search.html
+++ b/recipes/templates/recipes/partials/search.html
@@ -1,7 +1,11 @@
 <div class="search-container">
     <div class="container">
         <form action="{% url 'recipes:search' %}" class="search-form">
-            <input type="search" class="search-input" name="q" required>
+            <input type="search"
+                   class="search-input"
+                   name="q"
+                   required
+                   value="{{ search_term }}">
             <button type="submit" class="search-button">
                 <i class="fas fa-search"></i>
             </button>
