--- a/recipes/templates/recipes/partials/pagination.html
+++ b/recipes/templates/recipes/partials/pagination.html
@@ -2,20 +2,23 @@
     <div class="container pagination">
         <div class="pagination-content">
             {% if pagination_range.first_page_out_of_range and pagination_range.total_pages > pagination_range.qty_pages %}
-                <a class="page-link page-item" href="?page=1">1</a>
+                <a class="page-link page-item"
+                   href="?page=1{{ additional_query_string }}">1</a>
                 <span class="page-item">...</span>
             {% endif %}
             {% for page in pagination_range.pagination %}
                 {% if page == pagination_range.current_page %}
-                    <a class="page-link page-item page-current" href="?page={{ page }}">{{ page }}</a>
+                    <a class="page-link page-item page-current"
+                       href="?page={{ page }}{{ additional_query_string }}">{{ page }}</a>
                 {% else %}
-                    <a class="page-link page-item" href="?page={{ page }}">{{ page }}</a>
+                    <a class="page-link page-item"
+                       href="?page={{ page }}{{ additional_query_string }}">{{ page }}</a>
                 {% endif %}
             {% endfor %}
             {% if pagination_range.last_page_out_of_range %}
                 <span class="page-item">...</span>
                 <a class="page-link page-item"
-                   href="?page={{ pagination_range.total_pages }}">{{ pagination_range.total_pages }}</a>
+                   href="?page={{ pagination_range.total_pages }}{{ additional_query_string }}">{{ pagination_range.total_pages }}</a>
             {% endif %}
         </div>
     </div>
