--- a/authors/templates/authors/pages/register_view.html
+++ b/authors/templates/authors/pages/register_view.html
@@ -14,13 +14,15 @@
                     <div class="form-group">
                         <label for="{{ field.id_for_label }}">{{ field.label }}</label>
                         {{ field }}
-                        {% if field.help_text %}<p class="help_text">{{ field.help_text }}</p>{% endif %}
+                        {% if field.help_text %}<p class="help_text">{{ fiesld.help_text }}</p>{% endif %}
                         {{ field.errors }}
                     </div>
                 {% endfor %}
             </div>
-            <div class="form-group">
-                <button type="submit">Enviar</button>
+            <div class="form-content form-content-grid">
+                <div class="form-group">
+                    <button type="submit">Enviar</button>
+                </div>
             </div>
         </form>
     </div>
