--- a/authors/templates/authors/pages/login.html
+++ b/authors/templates/authors/pages/login.html
@@ -5,6 +5,11 @@
 {% block content %}
     <div class="container center main-content">
         <h2>Login</h2>
+        {% if request.user.is_authenticated %}
+            <p>
+                You are logged in with <strong>{{ request.user.username }}</strong>
+            </p>
+        {% endif %}
     </div>
     {% include 'global/partials/messages.html' %}
     {% include 'global/partials/form.html' %}
