teste funcional pesquisa de recipe por titulo

--- a/global_templates/global/partials/search.html
+++ b/global_templates/global/partials/search.html
@@ -5,7 +5,8 @@
                    class="search-input"
                    name="q"
                    required
-                   value="{{ search_term }}">
+                   value="{{ search_term }}"
+                   placeholder="Search for a recipe">
             <button type="submit" class="search-button">
                 <i class="fas fa-search"></i>
             </button>
