--- a/authors/templates/authors/pages/register_view.html
+++ b/authors/templates/authors/pages/register_view.html
@@ -7,5 +7,5 @@
         <h2>Register</h2>
     </div>
     {% include 'global/partials/messages.html' %}
-    {% include 'global/partials/form.html' %}
+    <div class="register-form-container">{% include 'global/partials/form.html' %}</div>
 {% endblock content %}
