teste funcional usuario consegue logar

--- a/authors/templates/authors/pages/login.html
+++ b/authors/templates/authors/pages/login.html
@@ -16,5 +16,5 @@
         {% endif %}
     </div>
     {% include 'global/partials/messages.html' %}
-    {% include 'global/partials/form.html' %}
+    <div class="login-form-container">{% include 'global/partials/form.html' %}</div>
 {% endblock content %}
