--- a/authors/templates/authors/pages/dashboard.html
+++ b/authors/templates/authors/pages/dashboard.html
@@ -1,12 +1,11 @@
 {% extends 'global/base.html' %}
 {% block title %}
-    Login |
+    Dashboard ({{ user }}) |
 {% endblock title %}
 {% block content %}
     <div class="container center main-content">
-        <h2>Login</h2>
+        <h2>Dashboard ({{ user }})</h2>
         {% include 'authors/partials/login_logout_message.html' %}
     </div>
     {% include 'global/partials/messages.html' %}
-    <div class="login-form-container">{% include 'global/partials/form.html' %}</div>
 {% endblock content %}
