--- a/authors/templates/authors/pages/dashboard_recipe_edit.html
+++ b/authors/templates/authors/pages/dashboard_recipe_edit.html
@@ -7,6 +7,6 @@
         <h2>Dashboard Recipe</h2>
         {% include 'global/partials/messages.html' %}
         {% include 'authors/partials/login_logout_message.html' %}
-        <div class="authors-dashboard-container">{% include 'global/partials/form.html' %}</div>
+        <div class="left">{% include 'global/partials/form.html' %}</div>
     </div>
 {% endblock content %}
