--- a/global_templates/global/partials/form.html
+++ b/global_templates/global/partials/form.html
@@ -9,6 +9,11 @@
                     {% if field.help_text %}<p class="help-text">{{ field.help_text }}</p>{% endif %}
                     {{ field.errors }}
                 </div>
+                {% if field.name == 'cover' and field.value.url %}
+                    <div class="span-2">
+                        <img src="{{ field.value.url }}" alt="Capa para {{ recipe.title }}">
+                    </div>
+                {% endif %}
             {% endfor %}
         </div>
         <div class="form-content form-content-grid">
