--- a/global_templates/global/partials/form.html
+++ b/global_templates/global/partials/form.html
@@ -1,5 +1,7 @@
 <div class="main-content container">
-    <form action="{{ form_action }}" method="POST">
+    <form action="{{ form_action }}"
+          method="POST"
+          enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-content form-content-grid">
             {% for field in form %}
