validação de formulario recipe

--- a/authors/templates/authors/partials/login_logout_message.html
+++ b/authors/templates/authors/partials/login_logout_message.html
@@ -1,12 +1,10 @@
-<div class="login-message">
-    {% if request.user.is_authenticated %}
-        <p>
-            You are logged in with <strong>{{ request.user.username }}</strong>. Logout
-            <form action="{% url 'authors:logout' %}" method="POST" class="inline-form">
-                {% csrf_token %}
-                <button type="submit" class="plaintext-button">here</button>
-            </form>
-            , create <a href="{% url 'authors:dashboard_create_recipe' %}">new recipe</a> or <a href="{% url 'authors:dashboard' %}">see your recipes</a>.
-        </p>
-    {% endif %}
-</div>
+{% if request.user.is_authenticated %}
+    <div class="login-message">
+        Create <a href="{% url 'authors:dashboard_create_recipe' %}">new recipe</a> or <a href="{% url 'authors:dashboard' %}">see your recipes</a>.
+        You are logged in with <strong>{{ request.user.username }}</strong>. Logout
+        <form action="{% url 'authors:logout' %}" method="POST" class="inline-form">
+            {% csrf_token %}
+            <button type="submit" class="plaintext-button">here</button>
+        </form>
+    </div>
+{% endif %}
