--- a/authors/templates/authors/pages/dashboard_create_recipe.html
+++ b/authors/templates/authors/pages/dashboard_create_recipe.html
@@ -4,7 +4,7 @@
 {% endblock title %}
 {% block content %}
     <div class="main-content center container">
-        <h2>Dashboard Recipe</h2>
+        <h2>Create Recipe</h2>
         {% include 'global/partials/messages.html' %}
         {% include 'authors/partials/login_logout_message.html' %}
         <div class="left">{% include 'global/partials/form.html' %}</div>
