--- a/authors/templates/authors/pages/dashboard.html
+++ b/authors/templates/authors/pages/dashboard.html
@@ -13,8 +13,13 @@
                 {% for recipe in recipes %}
                     <li>
                         <a href="{% url 'authors:dashboard_recipe_edit' recipe.id %}">{{ recipe.title }}</a>
+                        <form action="{% url 'authors:dashboard_delete_recipe' recipe.id %}"
+                              method="POST"
+                              class="inline-form delete-recipe-form">
+                            {% csrf_token %}
+                            <button type="submit" class="plaintext-button">&#x274c;</button>
+                        </form>
                     </li>
-                    {% comment %} {% include 'recipes/partials/recipe.html' %} {% endcomment %}
                 {% empty %}
                     <li class="no-recipes">
                         <p>You do not have recipes. Create one.</p>
