--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -56,7 +56,7 @@
     {% if not is_detail %}
         <footer class="recipe-footer">
             <a class="recipe-read-more button button-dark button-full-width"
-               href="{% url 'recipes:recipe' recipe.id %}">
+               href="{{ recipe.get_absolute_url }}">
                 <i class="fas fa-eye"></i>
                 <span>ver mais...</span>
             </a>
